# ebdlm-babylm

./: .gitignore  prepare_pretrain_data.py  pretokenize_by_document.py  pyproject.toml  requirements-hopper.txt  tokenizer.py  train.py  utils.py
conf/: config.yaml  prepare_data.yaml  tokenizer.yaml
conf/dataset/: strict.yaml  strict_small.yaml
conf/energy/: default.yaml
conf/logging/: wandb.yaml
conf/model/: base.yaml  tiny.yaml
conf/samples/: default.yaml
conf/trainer/: default.yaml  strict_small.yaml
models/: __init__.py  configuration_ebdlm.py  ebdlm.py  factory.py  modeling_ebdlm.py
scripts/: prepare_pretrain_data.slurm  run_generation_inspect.py  run_prompted_generation.py  setup_hopper_env.slurm  train_diffusion.slurm  train_energy.slurm  train_pretrain.slurm
training/: callbacks.py  data.py  generation.py  module.py  run_dir.py  trainer_runtime.py
