[project]
name = "ebdlm-babylm"
version = "0.1.0"
description = "Energy-based diffusion language models for the BabyLM benchmark"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch==2.7.0",
    "transformers>=4.48.0",
    "tokenizers>=0.21.0",
    "datasets>=5.0.0",
    "hydra-core>=1.3.3",
    "lightning>=2.4",
    "wandb>=0.18",
    "polars>=1.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
# Local Windows only: uv sync --group windows
windows = [
    "flash-attn==2.8.3",
]

[tool.uv]
package = false

# uv — local Windows dev (cu128 / Blackwell). Cluster: venv + requirements-hopper.txt (cu124).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
# No official Windows wheels; kingbri1 build matches torch 2.7.0+cu128 cp311.
flash-attn = { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.7.0cxx11abiFALSE-cp311-cp311-win_amd64.whl" }

[tool.pytest.ini_options]
pythonpath = ["."]

# Format only — run: uv run ruff format .
[tool.ruff]
line-length = 88
