[project]
name = "ebdlm-babylm"
version = "0.1.0"
description = "Energy-based diffusion language models for the BabyLM benchmark"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch==2.7.0",
    "transformers>=4.48.0",
    "tokenizers>=0.21.0",
    "datasets>=5.0.0",
    "hydra-core>=1.3.3",
    "lightning>=2.4",
    "wandb>=0.18",
    "polars>=1.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
# Platform markers pick the right flash-attn source; both groups are safe with `uv sync --all-groups`.
hopper = [
    "flash-attn==2.8.3; sys_platform == 'linux'",
]
windows = [
    "flash-attn==2.8.3; sys_platform == 'win32'",
]

[tool.uv]
package = false
# Hopper builds flash-attn from source (see scripts/setup_hopper_env.slurm for CUDA arch env).
no-build-isolation-package = ["flash-attn"]

# Windows: cu128 + prebuilt flash-attn wheel. Hopper Linux: cu126 + flash-attn source build.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
flash-attn = [
    { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.7.0cxx11abiFALSE-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32'" },
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

# Env sync (same command on both platforms; markers + groups resolve CUDA differences):
#   uv sync --all-groups
# Regenerate requirements-hopper.txt after lock changes (Linux pip fallback):
#   uv export --no-dev --no-emit-project --no-hashes -o requirements-hopper.txt
